--- a/rails4/.gitignore
+++ b/rails4/.gitignore
@@ -1,13 +1,13 @@
 *.rbc
 capybara-*.html
 .rspec
-/log
-/tmp
-/db/*.sqlite3
-/db/*.sqlite3-journal
-/public/system
-/coverage/
-/spec/tmp
+log/
+tmp/
+db/*.sqlite3
+db/*.sqlite3-journal
+public/system
+coverage/
+spec/tmp
 **.orig
 rerun.txt
 pickle-email-*.html
@@ -21,8 +21,8 @@ config/secrets.yml
 .env
 
 ## Environment normalization:
-/.bundle
-/vendor/bundle
+.bundle/
+vendor/bundle/
 
 # these should all be checked in to normalize the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
@@ -31,7 +31,7 @@ config/secrets.yml
 .rvmrc
 
 # if using bower-rails ignore default bower_components path bower.json files
-/vendor/assets/bower_components
+vendor/assets/bower_components
 *.bowerrc
 bower.json
 
@@ -40,3 +40,5 @@ bower.json
 
 # Ignore Byebug command history file.
 .byebug_history
+.buildpath
+.project
