--- a/rails5/Gemfile
+++ b/rails5/Gemfile
@@ -44,3 +44,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'her'
 gem "faraday_middleware"
 gem 'mysql2'
+gem 'rack-oauth2'
